--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="right-container">
-      <div>
+      <div class="right-text">
         <p>This isn't a real form, but isn't it darn cool!</p>
         <p><em>Maybe</em> it should be used for something...</p>
       </div>
@@ -22,12 +22,12 @@
 
         <section class="form-group">
           <label for="first-name"
-            >First name
+            >First Name
             <input type="text" name="first-name" id="first-name" required />
           </label>
 
           <label for="last-name"
-            >Last name
+            >Last Name
             <input type="text" name="last-name" id="last-name" required />
           </label>
         </section>
